# english-marshallese-translation

./: .env.example  config.py  main.py  prompts.py  pyproject.toml  requirements.txt  translator.py
Data/: marshallese.json
